--- a/gui/GaussianBeamWidget.ui
+++ b/gui/GaussianBeamWidget.ui
@@ -31,7 +31,7 @@
         <enum>QFrame::Plain</enum>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
        </property>
        <widget class="QWidget" name="page_Bench">
         <property name="geometry">
@@ -117,13 +117,19 @@
         </layout>
        </widget>
        <widget class="QWidget" name="page_MagicWaist">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>228</width>
-          <height>360</height>
+          <width>254</width>
+          <height>479</height>
          </rect>
+        </property>
+        <property name="cursor">
+         <cursorShape>WaitCursor</cursorShape>
         </property>
         <attribute name="label">
          <string>Magic waist</string>
@@ -241,7 +247,7 @@
          <item>
           <widget class="QCheckBox" name="checkBox_ShowTargetBeam">
            <property name="enabled">
-            <bool>true</bool>
+            <bool>false</bool>
            </property>
            <property name="text">
             <string>Show target beam</string>
@@ -322,8 +328,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>237</width>
-          <height>511</height>
+          <width>240</width>
+          <height>514</height>
          </rect>
         </property>
         <attribute name="label">
