--- a/gui/GaussianBeamWidget.ui
+++ b/gui/GaussianBeamWidget.ui
@@ -31,15 +31,15 @@
         <enum>QFrame::Plain</enum>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="page_Bench">
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>254</width>
-          <height>479</height>
+          <width>260</width>
+          <height>503</height>
          </rect>
         </property>
         <attribute name="label">
@@ -48,14 +48,17 @@
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QGroupBox" name="groupBox">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
            <property name="title">
             <string>Boundaries</string>
            </property>
            <layout class="QGridLayout" name="gridLayout">
-            <item row="1" column="0">
-             <widget class="QLabel" name="label_6">
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_7">
               <property name="text">
-               <string>Left</string>
+               <string>Right</string>
               </property>
              </widget>
             </item>
@@ -75,13 +78,6 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="label_7">
-              <property name="text">
-               <string>Right</string>
-              </property>
-             </widget>
-            </item>
             <item row="2" column="1">
              <widget class="QDoubleSpinBox" name="doubleSpinBox_RightBoundary">
               <property name="suffix">
@@ -95,6 +91,59 @@
               </property>
               <property name="singleStep">
                <double>10.000000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_6">
+              <property name="text">
+               <string>Left</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1">
+             <widget class="QDoubleSpinBox" name="doubleSpinBox_UpperBoundary">
+              <property name="suffix">
+               <string> mm</string>
+              </property>
+              <property name="minimum">
+               <double>-100000.000000000000000</double>
+              </property>
+              <property name="maximum">
+               <double>100000.000000000000000</double>
+              </property>
+              <property name="singleStep">
+               <double>10.000000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="1">
+             <widget class="QDoubleSpinBox" name="doubleSpinBox_LowerBoundary">
+              <property name="suffix">
+               <string> mm</string>
+              </property>
+              <property name="minimum">
+               <double>-100000.000000000000000</double>
+              </property>
+              <property name="maximum">
+               <double>100000.000000000000000</double>
+              </property>
+              <property name="singleStep">
+               <double>10.000000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0">
+             <widget class="QLabel" name="label_10">
+              <property name="text">
+               <string>Upper</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="QLabel" name="label_11">
+              <property name="text">
+               <string>Lower</string>
               </property>
              </widget>
             </item>
@@ -124,8 +173,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>254</width>
-          <height>479</height>
+          <width>260</width>
+          <height>503</height>
          </rect>
         </property>
         <property name="cursor">
@@ -328,8 +377,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>240</width>
-          <height>514</height>
+          <width>260</width>
+          <height>503</height>
          </rect>
         </property>
         <attribute name="label">
